<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro"
        android:textStyle="bold"
        tools:context=".MainActivity" />

    <EditText
        android:id="@+id/ascii_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:gravity="top|left"
        android:hint=""
        android:inputType="textMultiLine"
        android:lines="10"
        android:maxLines="10"
        android:minLines="10"
        android:scrollbars="vertical"
        android:singleLine="false"
        android:textColor="#ffffff"
        android:typeface="monospace" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />

        <Button
            android:id="@+id/export_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/export" />

        <Button
            android:id="@+id/load_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/new_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_pic" />

        <Button
            android:id="@+id/delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete" />

        <Button
            android:id="@+id/set_colors_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#333333"
            android:padding="5dp"
            android:text="@string/set_colors"
            android:textColor="#ffffff"
            android:textStyle="italic" />
    </LinearLayout>

</LinearLayout>